--- a/build.gradle
+++ b/build.gradle
@@ -15,5 +15,8 @@ dependencies {
     // https://mvnrepository.com/artifact/io.undertow/undertow-core
     compile group: 'io.undertow', name: 'undertow-core', version: '2.0.9.Final'
 
+    // https://mvnrepository.com/artifact/io.netty/netty-all
+    compile group: 'io.netty', name: 'netty-all', version: '4.1.25.Final'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
